# libpndman

./: .gitmodules  CMakeLists.txt  Makefile  README  README.md  TODO  make_mingw.sh
helper/: CMakeLists.txt  milky.c
include/: pndman.h
lib/: CMakeLists.txt  curl.c  curl.h  database.c  device.c  device.h  handle.c  internal.h  json.c  json.h  md5.c  md5.h  package.c  package.h  pndman.c  pndman.h  pxml.c  repo_api.c  repository.c  repository.h  version.h.in
test/: CMakeLists.txt  Makefile  common.h  crawl.c  curl.c  device.c  handle.c  list.c  pthread.c  pxml.c  repo.c  repo2.c  repo_api.c  sample.c  update.c
